    * cron's style work
    * configuration in database (only, ini files not supported)
    * rewrited database drivers
    * database connection options from command line or environment
    * selected hosts/routers reloading
    * WARNING: Old daemon not supported in Reload menu!
  - suspension percentage for assignments can be specified in lms.ini (chilek)
  - history of userbalace work_in_progress (hunter) 

version 1.5.5 Anubis (25/03/2005):

  - fixed empty page printing on invoices when trying to print only 
    originals or only copies (alec)
  - fixed encoding conversion of some strings on pdf invoices (peter/alec)
  - index.php: localization before uiconfig reading, to have proper encoding 
    in configuration options if we use server_encoding != unicode (alec)
  - contrib/customer_otherip: changed login.html to customerlogin.html because
    of conflict with templates/login.html in Smarty cache (alec)
  - size reduction of LMS main class, some one-time functions moved to 
    modules i.e. Mailing(), Traffic() (alec)
  - added basic (without group checking) body of check_ssn() function for 
    'en' locale (alec)
  - contrib/formularz_przelewu_wplaty(_2): fixed encoding and bug with empty
    page (alec)
  - lms-payments print accounting messages on STDERR (lukasz/alec)
  - helpdesk: fixed encoding in message contents to UTF-8, added option
    phpui/helpdesk_sender_name for name of message sender (alec)
  - fixed bug in userassignmentedit.html when customer has " sign in name (alec)
  - BTS#0000283: added link 'Clear Account' on Customer Account (alec)
  - added cash operations import interface (lexx/alec)
  - sql queries speedup in GetTariff() and GetTariffList() (alec)
  - "all liabilities suspending" can be edited like other assignments (alec)
  - BTS#0000292: tariff's avg monthly income don't take into consideration
    suspended liabilities (alec)
  - added index on tariffid column in assignments table (alec)