@@ -17,7 +17,10 @@ version 1.5.6 Baal (??/??/????):
     * selected hosts/routers reloading
     * WARNING: Old daemon not supported in Reload menu!
   - suspension percentage for assignments can be specified in lms.ini (chilek)
-  - history of userbalace work_in_progress (hunter) 
+  - history of userbalace work_in_progress (hunter)
+  - in invoice edition added check that settlement date not conflicts with
+    invoice number, so we can change date only to the same year or month
+    (monthly_numbering) that was before change (alec)
 
 version 1.5.5 Anubis (25/03/2005):
 
